Revert Coin Configuration Logic
